Added field to sales settings to select the used journal.

--- a/view/configuration_form.xml
+++ b/view/configuration_form.xml
@@ -5,5 +5,7 @@
     <xpath expr="/form" position="inside">
         <label name="pending_invoice_account" />
         <field name="pending_invoice_account" />
+        <label name="sale_journal"/>
+        <field name="sale_journal"/>
     </xpath>
 </data>
